[project]
name = "modelscope-image-mcp"
version = "0.1.0"
description = "MCP Server for ModelScope Qwen-Image text-to-image generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests",
    "python-dotenv",
    "Pillow",
]

[project.scripts]
modelscope-image-mcp = "modelscope_image_mcp.server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
